# PrismDetect

./: .env  .gitignore  README.md  Start.sh  ai_studio_testing_app_prompt.md  check_dim.py  requirements_verification.md  setup.sh
PrismDetect/: .gitignore  Makefile  merge_test.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  test_crash.py  test_detector_crash.py
PrismDetect/api/: app.py  dependencies.py
PrismDetect/api/routes/: detect.py  health.py  metrics.py  products.py
PrismDetect/config/: .env.example  logging.yaml  products.json  settings.py
PrismDetect/core/: clip_onnx.py  detector.py  index.py  patch_scanner.py
PrismDetect/core/learning/: auto_learner.py
PrismDetect/core/validators/: shape_validator.py  text_validator.py
PrismDetect/data/index/: product_index.faiss  product_index.pkl  product_index_768.pkl
PrismDetect/docker/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml
PrismDetect/docs/: walkthrough.md
PrismDetect/scripts/build-models/: build_onnx.py
PrismDetect/scripts/deploy/: download_models.sh  init_index.py
PrismDetect/scripts/dev/: test_detection.py
frontend/: App.tsx  Dockerfile  README.md  index.html  metadata.json  nginx.conf  package-lock.json  package.json  types.ts
frontend/components/: BatchForensics.tsx  Dashboard.tsx  Layout.tsx  ProductStudio.tsx  VisionLab.tsx
frontend/lib/: utils.ts
frontend/services/: api.ts  geminiService.ts
